test/reject/01-nothing_to_do_with_imgine.imgine
// Has nothing to do with Imgine

34l{234{2k34}++2{+´+}´´{ñ{-}}}
